--- a/src/GameScreen/Segmentation.css
+++ b/src/GameScreen/Segmentation.css
@@ -1,12 +1,15 @@
-#video, #canvas {
-  height: 100%;
-  width: 100%;
-  object-fit: cover;
+#video {
+  opacity: 0;
+  z-index: 0;
+}
+
+#canvas {
   position: absolute;
   left: 0;
   top: 0;
+  z-index: 1;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
-#video {
-    opacity: 0;
-}
