--- a/src/GameScreen/GameScreen.css
+++ b/src/GameScreen/GameScreen.css
@@ -29,3 +29,17 @@
   transform: scaleX(-1);
   display: none;
 }
+
+.loadedItems {
+  position: fixed;
+  right: 0;
+  top: 0;
+  background: green;
+}
+
+.controls {
+  z-index: 10;
+  position: fixed;
+  top: 0;
+  left: 0;
+}
