--- a/src/Reel/Reel.css
+++ b/src/Reel/Reel.css
@@ -1,41 +1,55 @@
 .reels-wrapper {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 100vh;
 }
 
 .reels-content-wrapper {
-  max-width: 360px;
-  max-height: 640px;
-  height: 100%;
-  width: 100%;
-  background: black;
-  border-radius: 24px;
-  position: relative;
-  overflow: auto;
-  border: 5px solid black;
+  max-width: 1200px;
+  padding: 1rem;
+  margin: 0 auto;
 }
 
 .title {
+  font-family: "Press Start 2P", sans-serif;
+
   color: white;
   margin-left: 1rem;
+  margin-bottom: 2rem;
+  text-align: center;
 }
 
 .section {
+  margin-bottom: 3rem;
 }
 
 .section-content {
   padding: 1rem;
+  display: flex;
+  justify-content: center;
+  gap: 1rem;
+
+  @media screen and (max-width: 800px) {
+    flex-direction: column;
+  }
 }
 
 .section-content video {
-  width: 100%;
   border-radius: 20px;
+
+  @media screen and (max-width: 800px) {
+    width: 100%;
+  }
 }
 
 .video-wrap {
   position: relative;
+  max-height: 100%;
+  max-width: 100%;
+  height: 640px;
+  width: 360px;
+
+  @media screen and (max-width: 800px) {
+    height: unset;
+    width: unset;
+  }
 }
 
 .play-button {
@@ -58,13 +72,46 @@
 
 .meta {
   color: white;
+  border: 1px solid magenta;
+  box-shadow: 0 0 10px magenta;
+  border-radius: 20px;
+  padding: 1rem 2rem;
+  height: fit-content;
 }
 
 .userName {
-  margin-bottom: 0.5rem;
+  margin-bottom: 1rem;
+  margin-top: 0;
+  font-family: "Press Start 2P", sans-serif;
 }
 
 .fitnessScore {
   margin-top: 0;
-  margin-bottom: 0.2rem;
+  margin-bottom: 0.4rem;
+  display: flex;
+  align-items: center;
+}
+
+.meta-icon {
+  font-size: inherit;
+  margin-right: 0.4rem;
+}
+
+.likes-container {
+  display: flex;
+  align-items: center;
+  gap: 0.2rem;
+  color: white;
+  margin-bottom: 1rem;
+}
+
+.like-button {
+  background: no-repeat;
+  color: white;
+  border: none;
+  font-size: 24px;
+  cursor: pointer;
+  padding: 0;
+  display: flex;
+  align-items: center;
 }
